# FAIR

./: CMakeLists.txt  LICENSE  ProjectAdd.cmake  README.md
F_Mesure/: CMakeLists.txt  main.cpp  perImage.cpp
binAlgo/: CMakeLists.txt  EM_modif.cpp  EM_modif.h  OpImg.cpp  OpImg.h  binGraphCut.cpp  binarization.cpp  binarization.h  connected.cpp  connected.h  findText.cpp  macro.h
demonstration/: CMakeLists.txt  main.cpp
evaluation/: HW1_res1.tiff  MCR link.txt  result.cmd
